--- a/src/style.css
+++ b/src/style.css
@@ -5,17 +5,20 @@ body {
   height: 100%;
   width: 100%;
 }
+
 #c {
   width: 100%;
   height: 100%;
   display: block;
 }
+
 #container {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
+
 #labels {
   position: absolute;
   z-index: 0;
@@ -23,30 +26,49 @@ body {
   top: 0;
   color: white;
 }
-#labels > div {
-  position: absolute;
-  left: 0;
-  top: 0;
-  cursor: pointer;
-  font-size: small;
-  user-select: none;
-  /* pointer-events: none; */
-  text-shadow: -1px -1px 0 #000, 0 -1px 0 #000, 1px -1px 0 #000, 1px 0 0 #000,
-    1px 1px 0 #000, 0 1px 0 #000, -1px 1px 0 #000, -1px 0 0 #000;
-}
-#labels > div:hover {
-  color: red;
-}
 
 .label-container {
   pointer-events: auto;
   cursor: pointer;
 }
 
+.label-container .country-name {
+  position: absolute;
+  left: 0;
+  top: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  user-select: none;
+  background-color: #4040f286;
+  padding: 0.3rem;
+  margin-top: 0.3rem;
+}
+
+.label-container .country-name:hover {
+  background-color: #4040f2;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.3);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
 .marker-pin {
-  width: 10px;
-  height: 10px;
-  background-color: rgb(238, 91, 6);
+  width: 15px;
+  height: 15px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  border: 1px solid #4040f2;
+  animation: pulse 2s infinite;
 }
 
 .main-bg {
@@ -55,5 +77,5 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(56, 8, 78);
+  background: radial-gradient(circle at center, #4040f2, #020231);
 }
